--- a/AppAndroid/app/src/main/res/values/strings.xml
+++ b/AppAndroid/app/src/main/res/values/strings.xml
@@ -12,6 +12,58 @@ dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti 
 litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
 diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
 ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
+
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
+volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
+dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
+litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
+diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
+ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
+volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
+dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
+litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
+diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
+ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
+
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
+volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
+dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
+litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
+diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
+ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
+
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
+volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
+dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
+litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
+diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
+ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
+volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
+dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
+litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
+diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
+ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
+volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
+dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
+litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
+diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
+ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
+
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
+volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
+dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
+litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
+diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
+ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
+volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
+dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
+litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
+diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
+ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
     </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
